syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

message Video {
    string id = 1;
    string title = 2;
    string thumbnail_url = 3;
    string description = 4;
    google.protobuf.Timestamp published_at = 5;
}

message GetYoutubeVideosResponse {
    string next_page_token = 1;
    repeated Video videos = 2;
}

message Metadata {
    string title = 1;
    string description = 2;
    string language = 3;
}

message GetMetadataResponse {
    Metadata metadata = 1;
}

message UpdateMetadataRequest {
    string id = 1;
    map<string, Metadata> metadata = 2;
}
